2025-12-10  Aleksej Dix <git@aleksejdix.com>
	* Replaced TypeScript CLI build with Vite 7.2.7 (ESM only output)
	* Replaced Mocha/Chai/c8 with Vitest 4.0.15
	* Replaced ESLint with oxlint 1.32.0 (type-aware linting)
	* Updated TypeScript to 5.9.3
	* Updated typedoc to 0.28.4
	* Removed bower.json (Bower support dropped)
	* Removed AMD/CommonJS output (ESM only)
	* Removed docdash (unused JSDoc theme)
	* Added dist/ and docs/ to .gitignore

2024-04-13  Saša Jovanić <sasa@simplify.ba>
        * Upgraded several npm packages
        * Moved to new ts compiler targets
        * Removed Karma dependency
        * Moved to have type="module" in package.json

2024-03-23  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.5.1

2024-03-05  Philipp Sieber <philipp.sieber@getyourguide.com>
	      * Added Oman (OM)

2024-02-28  Guillem Martinez <guillem@antswarm.ai>
	      * Fix Spanish (ES) IBAN extraction

2024-02-14  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.5.0

2024-02-14  Mayeul-T <mayeul@touchard.bzh>
	      * Fix French (FR) IBAN extract

2024-01-09  Saša Jovanić <sasa@simplify.ba>
	      * Added dual licensing, MIT or MPL-2.0

2024-01-09  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.3.9
	      * Removed Dutch (NL) BBAN validation

2023-12-08  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.3.8

2023-12-06  Artur Aralin <artur.aralin97@gmail.com>
	      * Remove `console.log`

2023-12-03  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.3.7

2023-12-02  Saša Jovanić <sasa@simplify.ba>
	      * Added Dutch (NL) BBAN validation

2023-11-26  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.3.6

2023-11-13  Davide Bianco <d.bianco@ermes.company>
	      * Fixed specs for Slovenian IBAN

2023-10-14  Saša Jovanić <sasa@simplify.ba>
	      * Version 4.3.5
	      * Added script to parse IBAN specification provided as text file
	      * Added code to extract `accountNumber`, `bankIdentifier` and `branchIdentifier` and provide it in `ExtractIBANResult`
